--- a/index.html
+++ b/index.html
@@ -80,25 +80,14 @@
 							<section id="three">
 								<div class="container">
 									<h3>Demo</h3>
-									<p>Workflow:</p>
-									<img src="images/datapipeline.jpg" width="780">
 									<p>Dashboard:</p>
-									<img src="images/dashboard.JPG" width="780">
-									<p>Goods pricing analysis:</p>
-									<img src="images/dashboard2.JPG" width="780">
-									<ul>
-										<li>Python script combines flat files into one Tableau input.</li>
-										<li>In this case I use static source which is CSV flat files (batch processing).</li>
-										<li>However data pipelines are built also for real-time sources where target system requires constant data update (stream processing).</li>
-										<li>The example shows that ultimate destination of data pipelines doesn't have to be a data warehouse.</li>
-										<li>Data pipeline can route the processed data into another applications like Tableu for building dashboards.</li>
-										<li>Once dashboard built, there is the Tableau option for sending it into server.</li>
-										<li>Once published, we can perfrom Business Analysis.</li>
-										<li>Making decisions based on BA leads to process improvements</li>
-										<li>Process improvements generates new data that can undergo the Data Warehousing all over again.</li>
-										<li>Data Warehous is a great concept for monitoring business processes and continuous improvement impementation.</li>
-										<li>Taking conclusions from the analysis that can improve business perfomance.</li>
-									</ul>
+									<img src="images/gym_dashboard.JPG" width="780">
+									<p>Data insertion:</p>
+									<img src="images/gym.gif" width="780">
+									<p>Database:</p>
+									<img src="images/db.JPG" width="780">
+									<p>Terminal:</p>
+									<img src="images/cmd.JPG" width="780">
 								</div>
 							</section>
 
@@ -106,10 +95,11 @@
 							<section id="four">
 								<div class="container">
 									<h3>Setup</h3>
-									<p>Following installation required:</p>
+									<p>Python library installation required:</p>
 									<ul>
-										<li>Python library: pip install pandas</li>
-										<li>Tableau software</li>
+										<li>pip install flask</li>
+										<li>pip install flask-sqlalchemy</li>
+										<li>pip install flask-wtf</li>
 									</ul>
 								</div>
 							</section>
@@ -118,7 +108,7 @@
 							<section id="five">
 								<div class="container">
 									<h3>Source Code</h3>
-									<p>You can view the source code: <a href="https://github.com/ArturSkrzeta/Data-Warehouse-CSV-Python-Tableau-Server-BA-New-Data/tree/master/project">HERE</a></p>
+									<p>You can view the source code: <a href="https://github.com/ArturSkrzeta/Flask-Full-Stack-Application">HERE</a></p>
 									<p>&nbsp</p>
 								</div>
 							</section>
