--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<section id="one">
 								<div class="container">
 									<header class="major">
-										<h2>Flask Full Stack Dashboard</h2>
+										<h2>Progress Tracking Dashboard</h2>
 										<h3>Intro</h3>
 										<p>Dashboard allows user to track the progress of the 3 main lifts id est: bench press, squat and deadlift.
 											User is able to provide its one-rep max lifts per each week to see the overall tendation of its strength.</p>
@@ -108,7 +108,7 @@
 							<section id="five">
 								<div class="container">
 									<h3>Source Code</h3>
-									<p>You can view the source code: <a href="https://github.com/ArturSkrzeta/Flask-Full-Stack-Application/tree/main/project">HERE</a></p>
+									<p>You can view the source code: <a href="https://github.com/ArturSkrzeta/Progress-Tracking-Dashboard-Full-Stack-with-Flask/tree/main/project">HERE</a></p>
 									<p>&nbsp</p>
 								</div>
 							</section>
