--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
 									<h3>Demo</h3>
 									<p>Dashboard:</p>
 									<img src="images/gym_dashboard.JPG" width="780">
+									<ul>
+										<li>Application enables user to insert the data.</li>
+										<li>Once data inserted, it's reflected in info boxes and charts right away.</li>
+										<li>Red colors indicate worse perfomrance than a week ago.</li>
+										<li>Green colors indicate better performance than a week ago.</li>
+									</ul>
 									<p>Data insertion:</p>
 									<img src="images/gym.gif" width="780">
 									<p>Database:</p>
