--- a/index.html
+++ b/index.html
@@ -90,10 +90,23 @@
 									</ul>
 									<p>Data insertion:</p>
 									<img src="images/gym.gif" width="780">
+									<ul>
+										<li>Form takes consecutive week as default value.</li>
+										<li>We are able to provide values for each lift.</li>
+										<li>Once values sent from the form, dashboard is being refreshed with new data.</li>
+									</ul>
 									<p>Database:</p>
 									<img src="images/db.JPG" width="362">
+									<ul>
+										<li>Form sends data into database.</li>
+										<li>Each record is unique for a specific lift and week of its perfomrance.</li>
+									</ul>
 									<p>Terminal:</p>
 									<img src="images/cmd.JPG" width="650">
+									<ul>
+										<li>We can query database from termianl as well.</li>
+										<li>To get all of the records we can access the via Flask Model.</li>
+									</ul>
 								</div>
 							</section>
 
