--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 									<p>Terminal:</p>
 									<img src="images/cmd.JPG" width="650">
 									<ul>
-										<li>We can query database from termianl as well.</li>
-										<li>To get all of the records we can access the via Flask Model.</li>
+										<li>We can query database from terminal as well.</li>
+										<li>To get all of the records we can access them via Flask Model.</li>
 									</ul>
 								</div>
 							</section>
